--- a/kesedes/index.css
+++ b/kesedes/index.css
@@ -7,7 +7,7 @@
 }
 
 header {
-    background-color: black;
+    background-color: #333;
     width: 100%;
     height: 13vh;
     color: white;
@@ -29,10 +29,11 @@ header img {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(112, 112, 112);
+    background-color: rgb(206, 206, 206);
     width: 30%;
     height: 50%;
     border-radius: 20px;
+    box-shadow: 0px 0px 0px 2px orangered;
 }
 
 .gerador input, button {
@@ -43,7 +44,7 @@ header img {
 footer {
     display: flex;
     place-content: center;
-    background-color: black;
+    background-color: #333;
     color: white;
     bottom: 0;
     position: fixed;
